[tool.poetry]
name = "anonim-voice-tg"
version = "0.1.0"
description = ""
authors = ["Sinder <rasul_sadullayev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
